--- a/code/index.html
+++ b/code/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="corpo">
         <div id="creditos">
-            <p id="desenvolvedor">Desenvolvedor: Luis</p> 
+            <p id="desenvolvedor">Desenvolvedor: Pedro</p> 
             <p id="contato">Contato: "You front? END? " Ass;Luis</p>
         </div>
 
