--- a/code/index.html
+++ b/code/index.html
@@ -11,8 +11,8 @@
 <body>
     <div id="corpo">
         <div id="creditos">
-            <p id="desenvolvedor">Desenvolvedor: Pedro</p> 
-            <p id="contato">Contato: "You front? END? " Ass;Luis</p>
+            <p id="desenvolvedor">Desenvolvedor: Luis</p> 
+            <p id="contato">Contato: "You front? END? " Ass;Luis#1359</p>
         </div>
 
         <a href="index.html" class="botao">Voltar</a>
@@ -22,5 +22,6 @@
     <script src="!Planta/badpage/badpage.js"></script>
     <script src="!Planta/artigos/Artigos.js"></script>
     <script src="!Planta/copyright/correctaccountant.js"></script>
+    <script src="!Planta/info/possibility.js"></script>
 </body>
 </html>
