--- a/code/index.html
+++ b/code/index.html
@@ -11,17 +11,17 @@
 <body>
     <div id="corpo">
         <div id="creditos">
-            <p id="desenvolvedor">Desenvolvedor: Luis</p> 
-            <p id="contato">Contato: "You front? END? " Ass;Luis#1359</p>
+            <p id="desenvolvedor">Desenvolvedor: VhCompany</p> 
+            <p id="contato">Contato: VhCompany#9999</p>
         </div>
 
         <a href="index.html" class="botao">Voltar</a>
     </div>
-    <script src="!Planta/copyright/credits.js"></script>
-    <script src="!Planta/info/dev.js"></script>
-    <script src="!Planta/badpage/badpage.js"></script>
-    <script src="!Planta/artigos/Artigos.js"></script>
-    <script src="!Planta/copyright/correctaccountant.js"></script>
-    <script src="!Planta/info/possibility.js"></script>
+    <script src="Planta/copyright/credits.js"></script>
+    <script src="Planta/info/dev.js"></script>
+    <script src="Planta/badpage/badpage.js"></script>
+    <script src="Planta/artigos/Artigos.js"></script>
+    <script src="Planta/copyright/correctaccountant.js"></script>
+    <script src="Planta/info/possibility.js"></script>
 </body>
 </html>
