--- a/code/index.html
+++ b/code/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="corpo">
         <div id="creditos">
-            <p id="desenvolvedor">Desenvolvedor: VhComany</p> 
+            <p id="desenvolvedor">Desenvolvedor: VhCompany</p> 
             <p id="contato">Contato: VhCompany#9999</p>
         </div>
 
