--- a/code/index.html
+++ b/code/index.html
@@ -14,6 +14,9 @@
             <p id="desenvolvedor">Desenvolvedor: VhCompany</p> 
             <p id="contato">Contato: VhCompany#9999</p>
         </div>
+        <div id="hpSponsor">
+            teste
+        </div>
 
         <a href="index.html" class="botao">Voltar</a>
     </div>
