--- a/code/index.html
+++ b/code/index.html
@@ -26,6 +26,7 @@
     <script src="Planta/artigos/Artigos.js"></script>
     <script src="Planta/copyright/correctaccountant.js"></script>
     <script src="Planta/info/possibility.js"></script>
+    <script src="Planta/info/site.js"></script>
 
     <script src="Planta/antadblock/ads.js"></script>
     <script src="Planta/antadblock/verify.js"></script>
