--- a/code/index.html
+++ b/code/index.html
@@ -14,7 +14,7 @@
             <p id="desenvolvedor">Desenvolvedor: VhCompany</p> 
             <p id="contato">Contato: VhCompany#9999</p>
         </div>
-        <div id="hpSponsor">
+        <div id="hpSponsor" onclick="hpSponsorVerify()">
             teste
         </div>
 
